--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "passport-jwt": "^4.0.1",
     "sequelize": "^6.37.3",
     "tedious": "^18.2.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
