feat: Se agrego funcionalidad al controlador de login

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "node --env-file .env --watch index.js"
+    "dev": "eslint --config eslint.config.js && node --env-file .env --watch index.js",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "eslint": "^7.32.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7",
@@ -21,6 +23,12 @@
     "tedious": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "globals": "^15.1.0",
     "sequelize-cli": "^6.6.2"
   }
 }
