--- a/config/config.json
+++ b/config/config.json
@@ -1,35 +1,11 @@
 {
-	"coopm_v1": {
-		"database": "coopm_v1",
-		"username": "DbDesarrollo",
-		"password": "m+?PvY:zUogF01Q^XH3i9",
-		"host": "localhost",
-		"port": 3306,
-		"dialect": "mysql"
-	},
-	"coopm_v2": {
-		"database": "coopm_v2",
+	"coopm_villa": {
+		"database": "coopm_villa",
 		"username": "DbDesarrollo",
 		"password": "m+?PvY:zUogF01Q^XH3i9",
 		"host": "localhost",
 		"port": 3306,
 		"dialect": "mysql",
-		"timezone": "America/Argentina/Buenos_Aires"
-	},
-	"procoop": {
-		"database": "PR_MT_NUEVA_DEMO",
-		"username": "Oficina",
-		"password": "Serversql2021",
-		"host": "192.168.0.160",
-		"port": 9387,
-		"dialect": "mssql"
-	},
-	"procoopOncativo": {
-		"database": "PR_ONC_DEMO",
-		"username": "ENRIQUE",
-		"password": "procoop123",
-		"host": "192.168.0.239",
-		"port": 1433,
-		"dialect": "mssql"
+		"timezone": "-03:00" 
 	}
 }
