--- a/config/config.json
+++ b/config/config.json
@@ -7,5 +7,13 @@
 		"port": 3306,
 		"dialect": "mysql",
 		"timezone": "-03:00" 
+	},
+	"bd_villa": {
+		"database": "coop",
+		"username": "OV",
+		"password": "Cspm2024!",
+		"host": "192.168.0.84",
+		"port": 3306,
+		"dialect": "mysql"
 	}
 }
