--- a/config/config.json
+++ b/config/config.json
@@ -12,8 +12,17 @@
 		"database": "coop",
 		"username": "OV",
 		"password": "Cspm2024!",
-		"host": "192.168.0.84",
+		"host": "172.26.5.232",
 		"port": 3306,
 		"dialect": "mysql"
+	},
+	"cooptech": {
+		"database": "cooptech",
+		"username": "DbDesarrollo",
+		"password": "m+?PvY:zUogF01Q^XH3i9",
+		"host": "localhost",
+		"port": 3306,
+		"dialect": "mysql",
+		"timezone": "-03:00" 
 	}
 }
