--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "cors": "^2.8.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
+        "mercadopago": "^2.0.11",
         "mysql2": "^3.10.3",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
