--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "axios": "^1.6.8",
+        "axios": "^1.8.4",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
         "mercadopago": "^2.0.11",
-        "mysql2": "^3.10.3",
+        "mysql2": "^3.13.0",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
+        "pluspagos-aes-encryption": "^1.0.0",
+        "samba-client": "^7.2.0",
         "sequelize": "^6.37.3",
         "tedious": "^18.2.0"
     },
