se agregan workflows

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -28,6 +28,25 @@ jobs:
         WITH_V: true
         PRERELEASE: false
 
+
+  # ci:
+  #   needs: bump
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #       - name: Checkout
+  #         uses: actions/checkout@v3
+
+  #       - name: install dependencies
+  #         run: |
+  #           npm install
+  #         working-directory: ./
+
+  #       - name: Run tests
+  #         run: |
+  #           npm run test
+  #         working-directory: ./
+
   cd:
     needs: bump 
     runs-on: ubuntu-latest
@@ -47,5 +66,9 @@ jobs:
             REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
             docker build \
               --build-arg SECRET=${{ secrets.SECRET }} \
+              --build-arg DB_USER=${{ secrets.DB_USER }} \
+              --build-arg DB_HOST=${{ secrets.DB_HOST }} \
+              --build-arg DB_PASS=${{ secrets.DB_PASS }} \
+              --build-arg DB_PORT=${{ secrets.DB_PORT }} \
               -t ${{ secrets.DOCKER_USER_NAME }}/${REPO_NAME}:${{ needs.bump.outputs.new_tag }} .
             docker push ${{ secrets.DOCKER_USER_NAME }}/${REPO_NAME}:${{ needs.bump.outputs.new_tag }}
