--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "pluspagos-aes-encryption": "^1.0.0",
         "samba-client": "^7.2.0",
         "sequelize": "^6.37.3",
-        "tedious": "^18.2.0"
+        "tedious": "^18.2.0",
+        "zod": "^3.25.57"
     },
     "devDependencies": {
         "@eslint/js": "^9.2.0",
